# DRACO

./: .gitignore  Dockerfile  GAN.toml  GAN_eval.py  GAN_train.py  README.md  SI_eval.py  SI_train.py  __evaluate_models.py  __main.py  evaluate_gan.py  evaluate_models.py  evaluate_models.sbatch  evaluate_si.py  evaluate_si.sbatch  evaluate_si_sample.py  gan_train.sbatch  gan_train_noise.sbatch  main.py  model_graph  plot_evaluation_si.py  pyproject.toml  run.bash  si_generate.py  si_generate.sbatch  si_train.sbatch  si_train_profile.sbatch  viz.py
evaluation/: align_eval_order.py  evaluate_gan.py  evaluate_si.py
generation/: add_colorbars.py  gan_generate_n_out.py  si_generate_n_out.py  si_integration_steps_analysis.py
logs/: gan_1770381.err  gan_1770381.out
plotting/: plot_evaluation_gan.py  plot_evaluation_si.py
sbatch/: __evaluate_models.sbatch  evaluate_gan_no_noise.sbatch  evaluate_gan_noise.sbatch  evaluate_si.sbatch  evaluate_si_sample.sbatch  gan_no_noise_generate_n_out.sbatch  gan_noise_generate_n_out.sbatch  gan_train_no_noise.sbatch  gan_train_noise.sbatch  si_generate_n_out.sbatch  si_train.sbatch  trace_si_sample.sbatch
scripts/: map_split_indices.py
src/: __init__.py  typing.py  utils.py
src/gan/: __discriminator.py  __generator.py  discriminator.py  generator.py
src/interpolants/: __init__.py  __stochastic_interpolant.py  stochastic_interpolant.py  stochastic_interpolant_models.py  typing.py  utils.py
training/: GAN_train.py
