[project]
name = "DRACO"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.11.2",
    "jax[cuda13]>=0.7.2",
    "numpy>=2.3.3",
    "optax>=0.2.6",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "wandb>=0.22.0",
]
