[project]
name = "DRACO"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    # "flax>=0.11.2", # Uncomment if not using cscs and the container environemnt image
    # "jax[cuda13]>=0.7.2", # Uncomment if not using cscs and the container environemnt image
    "numpy>=2.3.3",
    "optax>=0.2.6",
    "orbax-checkpoint>=0.11.25",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "wandb>=0.22.0",
]

# [[tool.uv.sources]]
# name = "jax-cuda"
# url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
